--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "axios": "0.19.0",
+    "react": "17.0.2",
+    "react-dom": "16.8.6",
     "react-scripts": "3.0.1"
   },
   "scripts": {
